deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: central-viewer
  name: central-viewer
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: central-viewer
