deployment/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: central-viewer-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: central-viewer
          servicePort: 80
        path: /
